# python-build-test-deploy

./: .flake8  .gitignore  README.md  azure-pipelines.yml  lint.py  pyproject.toml  setup-pre-commit-hook.sh
sampleproject/: capitalise.py.01  capitalize.py
tests/: test_capitalize.py
